cambio la forma de stopear un proceso

--- a/bottle-example.com/bottle-example.com.config
+++ b/bottle-example.com/bottle-example.com.config
@@ -1,6 +1,6 @@
 Listen 8888
 <VirtualHost *:8888>
- WSGIDaemonProcess bottle-example.com python-path=/var/www/bottle-example.com:/var/www/bottle-example.com/venv/lib/python2.7/site-packages
+ WSGIDaemonProcess bottle-example.com threads=20 display-name=bottle-example python-path=/var/www/bottle-example.com:/var/www/bottle-example.com/venv/lib/python2.7/site-packages
  WSGIProcessGroup bottle-example.com
  ServerName bottle-example.com
  WSGIScriptAlias / /var/www/bottle-example.com/todoapp.wsgi
